--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -55,7 +55,7 @@ section h2{
 #home {
     background: url('portfolio-background.avif') no-repeat center center/cover;
     height: 100vh;
-    color: rgb(58, 149, 50);
+    color: #ccc;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -235,4 +235,10 @@ i{
 
 }
 
+@media (max-width: 500px) {
 
+    .about-div{
+        flex-direction: column;
+    }
+
+}
